# LAB

./: .gitignore  CMakeLists.txt
IiPP-01/: CMakeLists.txt  IiPP-01.c
IiPP-01/output/: LAB.cbp  Makefile  cmake_install.cmake
IiPP-02/: CMakeLists.txt
IiPP-02/output/: Makefile  cmake_install.cmake
IiPP-03/: CMakeLists.txt  IiPP-03.c
IiPP-03/output/: Makefile  cmake_install.cmake
IiPP-04/: CMakeLists.txt  IiPP-04.c
IiPP-04/output/: Makefile  cmake_install.cmake
IiPP-04/output/Pliki_Programu/: Zadanie1.txt  Zadanie2.txt
IiPP-05/: CMakeLists.txt  IiPP-05.c
IiPP-05/output/: 2137jp2gmd.txt  Makefile  cmake_install.cmake
IiPP-05utput/: Makefile
Lab-01/: CMakeLists.txt  lab01.c
Lab-01/output/: LAB.cbp  Makefile  cmake_install.cmake
Lab-02/: CMakeLists.txt  lab02.c
Lab-02-test/: CMakeLists.txt  lab02-test.c
Lab-02-test/output/: Makefile  cmake_install.cmake
Lab-02/output/: Makefile  cmake_install.cmake
Lab-03/: CMakeLists.txt  lab03.c
Lab-03-t/: CMakeLists.txt
Lab-03-t/output/: Makefile
Lab-03/output/: Makefile  cmake_install.cmake  image.txt
Lab-0322042022/output/: Makefile
Lab-04/: CMakeLists.txt  lab04.c
Lab-04/output/: Makefile  cmake_install.cmake
Lab-05-functions/: CMakeLists.txt  lab05.c
Lab-05-functions/output/: Makefile  cmake_install.cmake
Lab-06-inf/: CMakeLists.txt  lab06.c
Lab-06-inf/output/: Makefile  cmake_install.cmake
Lab-07/: CMakeLists.txt  lab07.c
Lab-07/output/: Makefile  cmake_install.cmake
empty/: CMakeLists.txt
empty/output/: Makefile
lab-04-polbud/: CMakeLists.txt  lab-04-polbud.c
lab-04-polbud/output/: Makefile  cmake_install.cmake
windowtest/: CMakeLists.txt  windowtest.c
windowtest/output/: Makefile  cmake_install.cmake
