cmake_minimum_required(VERSION 3.21)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_subdirectory("${PROJECT_SOURCE_DIR}/Lab-01" "${PROJECT_SOURCE_DIR}/Lab-01/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab-02" "${PROJECT_SOURCE_DIR}/Lab-02/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab-04" "${PROJECT_SOURCE_DIR}/Lab-04/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab-05-functions" "${PROJECT_SOURCE_DIR}/Lab-05-functions/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/windowtest" "${PROJECT_SOURCE_DIR}/windowtest/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab-06-inf" "${PROJECT_SOURCE_DIR}/Lab-06-inf/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/IiPP-03" "${PROJECT_SOURCE_DIR}/IiPP-03/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/lab-04-polbud" "${PROJECT_SOURCE_DIR}/lab-04-polbud/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/IiPP-04" "${PROJECT_SOURCE_DIR}/IiPP-04/output")
add_subdirectory("${PROJECT_SOURCE_DIR}/IiPP-05" "${PROJECT_SOURCE_DIR}/IiPP-05/output")
